fix alignment issue for debate tree css mobile hack

--- a/kaif-web/src/main/webapp/less/component.less
+++ b/kaif-web/src/main/webapp/less/component.less
@@ -260,11 +260,14 @@
   // too many level, readability is more important
   @media (max-width: @screen-md-max) {
     .grid-center, .debate-child .grid-center {
-      margin-left: 6px;
+      margin-left: 26px;
     }
 
     .grid-convex, .debate-child .grid-convex {
       width: 26px;
+    }
+    .debate-child {
+      margin-left: -20px;
     }
   }
 }
